Fix alignment in display

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ p {
     width: 100%;
     height: 100%;
     text-align: right;
+    align-self: center;
     max-height: 1em;
     background-color: rgb(214, 202, 226);
     color: rgb(0, 0, 0);
